--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -123,6 +123,9 @@
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
+      <property name="editTriggers">
+       <set>QAbstractItemView::AllEditTriggers</set>
+      </property>
       <attribute name="horizontalHeaderStretchLastSection">
        <bool>true</bool>
       </attribute>
@@ -197,15 +200,18 @@
      <widget class="QTableWidget" name="strength_func_tableWidget">
       <property name="geometry">
        <rect>
-        <x>40</x>
+        <x>10</x>
         <y>10</y>
-        <width>201</width>
+        <width>261</width>
         <height>411</height>
        </rect>
       </property>
       <property name="horizontalScrollBarPolicy">
        <enum>Qt::ScrollBarAlwaysOff</enum>
       </property>
+      <attribute name="horizontalHeaderDefaultSectionSize">
+       <number>86</number>
+      </attribute>
       <column>
        <property name="text">
         <string>Label</string>
@@ -214,6 +220,11 @@
       <column>
        <property name="text">
         <string>Strength</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Color</string>
        </property>
       </column>
      </widget>
@@ -317,6 +328,21 @@
       </property>
      </widget>
     </widget>
+    <widget class="QWidget" name="tab_5">
+     <attribute name="title">
+      <string>Result</string>
+     </attribute>
+     <widget class="QTreeWidget" name="treeWidget">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>10</y>
+        <width>256</width>
+        <height>451</height>
+       </rect>
+      </property>
+     </widget>
+    </widget>
    </widget>
    <widget class="QLabel" name="label_4">
     <property name="enabled">
@@ -324,7 +350,7 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>400</x>
+      <x>340</x>
       <y>80</y>
       <width>71</width>
       <height>16</height>
@@ -340,7 +366,7 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>630</x>
+      <x>450</x>
       <y>80</y>
       <width>81</width>
       <height>16</height>
@@ -409,6 +435,9 @@
     <property name="autoScrollMargin">
      <number>16</number>
     </property>
+    <property name="editTriggers">
+     <set>QAbstractItemView::AllEditTriggers</set>
+    </property>
     <property name="horizontalScrollMode">
      <enum>QAbstractItemView::ScrollPerItem</enum>
     </property>
@@ -446,6 +475,9 @@
     </property>
     <property name="horizontalScrollBarPolicy">
      <enum>Qt::ScrollBarAlwaysOff</enum>
+    </property>
+    <property name="editTriggers">
+     <set>QAbstractItemView::AllEditTriggers</set>
     </property>
     <attribute name="horizontalHeaderStretchLastSection">
      <bool>true</bool>
@@ -528,29 +560,35 @@
    <widget class="QListWidget" name="activeLabels_listWidget">
     <property name="geometry">
      <rect>
-      <x>360</x>
+      <x>330</x>
       <y>110</y>
-      <width>151</width>
+      <width>91</width>
       <height>131</height>
      </rect>
+    </property>
+    <property name="editTriggers">
+     <set>QAbstractItemView::AllEditTriggers</set>
     </property>
    </widget>
    <widget class="QListWidget" name="inactiveLabels_listWidget">
     <property name="geometry">
      <rect>
-      <x>590</x>
+      <x>440</x>
       <y>110</y>
-      <width>151</width>
+      <width>91</width>
       <height>131</height>
      </rect>
+    </property>
+    <property name="editTriggers">
+     <set>QAbstractItemView::AllEditTriggers</set>
     </property>
    </widget>
    <widget class="QPushButton" name="activeLabel_Add_pushButton">
     <property name="geometry">
      <rect>
-      <x>360</x>
+      <x>330</x>
       <y>250</y>
-      <width>75</width>
+      <width>41</width>
       <height>23</height>
      </rect>
     </property>
@@ -561,9 +599,9 @@
    <widget class="QPushButton" name="activeLabel_Remove_pushButton">
     <property name="geometry">
      <rect>
-      <x>440</x>
+      <x>370</x>
       <y>250</y>
-      <width>75</width>
+      <width>51</width>
       <height>23</height>
      </rect>
     </property>
@@ -574,9 +612,9 @@
    <widget class="QPushButton" name="inactiveLabel_Remove_pushButton">
     <property name="geometry">
      <rect>
-      <x>670</x>
+      <x>480</x>
       <y>250</y>
-      <width>75</width>
+      <width>51</width>
       <height>23</height>
      </rect>
     </property>
@@ -587,9 +625,9 @@
    <widget class="QPushButton" name="inactiveLabel_Add_pushButton">
     <property name="geometry">
      <rect>
-      <x>590</x>
+      <x>440</x>
       <y>250</y>
-      <width>75</width>
+      <width>41</width>
       <height>23</height>
      </rect>
     </property>
@@ -652,10 +690,20 @@
    <widget class="QGraphicsView" name="graphicsView">
     <property name="geometry">
      <rect>
-      <x>330</x>
-      <y>70</y>
-      <width>441</width>
-      <height>381</height>
+      <x>319</x>
+      <y>110</y>
+      <width>451</width>
+      <height>331</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QGraphicsView" name="graphicsView_TileView">
+    <property name="geometry">
+     <rect>
+      <x>570</x>
+      <y>110</y>
+      <width>201</width>
+      <height>161</height>
      </rect>
     </property>
    </widget>
@@ -681,6 +729,7 @@
    <zorder>activationSig_Add_pushButton</zorder>
    <zorder>transmissionSig_Add_pushButton</zorder>
    <zorder>transmissionSig_Remove_pushButton</zorder>
+   <zorder>graphicsView_TileView</zorder>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
