Display Tile 2 was completely integrated into the project

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -341,6 +341,11 @@
         <height>451</height>
        </rect>
       </property>
+      <column>
+       <property name="text">
+        <string notr="true">1</string>
+       </property>
+      </column>
      </widget>
     </widget>
    </widget>
